WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
247436
`in` operator inside for statement destructuring
https://bugs.webkit.org/show_bug.cgi?id=247436
Summary
`in` operator inside for statement destructuring
Kanguk Lee
Reported
2022-11-03 09:17:48 PDT
// input.js for ( var { x = 0 in [ 0 ] } of [ 0 ] ); _____________________ Hello, Executing the input.js using JSC throws SyntaxError, but it is expected to terminate normally. Running the input.js with JSC gives --- $ jsc input.js Exception: SyntaxError: Unexpected keyword 'in'. Expected either a closing '}' or an ',' after a property destructuring pattern. at input.js:1 --- while other engines behave like --- # V8 $ node input.js // no error # GraalJS $ js input.js // no error --- WebKit version: 615.1.10
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-11-07 16:35:25 PST
<
rdar://problem/102065296
>
Yijia Huang
Comment 2
2022-11-09 10:38:10 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6305
EWS
Comment 3
2022-11-09 12:32:31 PST
Committed
256497@main
(598cda65c4a2): <
https://commits.webkit.org/256497@main
> Reviewed commits have been landed. Closing PR #6305 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug