Fix `in` operator inside for statement destructuring https://bugs.webkit.org/show_bug.cgi?id=247436 rdar://102065296

Reviewed by Alexey Shvayka.

Destructing statement should allow `in` operator even in `for...in/of`.

* JSTests/stress/destructing-in.js: Added.
(shouldBe):
* Source/JavaScriptCore/parser/Parser.cpp:
(JSC::Parser<LexerType>::parseVariableDeclarationList):

Canonical link: https://commits.webkit.org/256497@main